--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"axios": "^1.4.0",
 		"firebase": "^10.1.0",
 		"ionicons": "^7.1.2",
+		"is-url-http": "^2.3.5",
 		"lodash": "^4.17.21",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
