--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"deploy": "gh-pages -d build"
 	},
 	"dependencies": {
+		"@capacitor/android": "5.2.3",
 		"@capacitor/app": "5.0.6",
 		"@capacitor/camera": "^5.0.7",
 		"@capacitor/core": "5.2.3",
@@ -57,6 +58,7 @@
 		"sass": "^1.65.1",
 		"typescript": "^5.1.6",
 		"vite": "^4.3.9",
+		"vite-plugin-pwa": "^0.16.5",
 		"vitest": "^0.32.2"
 	},
 	"description": "An Ionic project",
