--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"lodash": "^4.17.21",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-firebase-hooks": "^5.1.1",
 		"react-hook-form": "^7.45.4",
 		"react-intl": "^6.4.4",
 		"react-router": "^5.3.4",
